--- a/css/style.css
+++ b/css/style.css
@@ -586,13 +586,63 @@ header {
 }
 
 .content3-logo-plans {
+    position: relative;
+    display: flex;
+    flex-direction: row;
     width: calc(1920 / 1920 * 100vw);
     height: calc(626 / 1080 * 100vh);
 }
 
-.content3-logo-plans svg {
-    width: calc(1920 / 1920 * 100vw);
-    height: calc(626 / 1080 * 100vh);
+.content3-logo-plans-svg1 {
+    position: absolute;
+    bottom: calc(184 / 1080 * 100vh);
+    left: calc(110 / 1920 * 100vw);
+    width: calc(241.40 / 1920 * 100vw);
+    height: calc(35 / 1920 * 100vw);
+    scale: 1;
+    transition: 0.2s;
+}
+
+.content3-logo-plans-svg2 {
+    position: absolute;
+    bottom: calc(177 / 1080 * 100vh);
+    left: calc(508 / 1920 * 100vw);
+    width: calc(175 / 1920 * 100vw);
+    height: calc(53 / 1920 * 100vw);
+    scale: 1;
+    transition: 0.2s;
+}
+.content3-logo-plans-svg3 {
+    position: absolute;
+    bottom: calc(186 / 1080 * 100vh);
+    left: calc(812 / 1920 * 100vw);
+    width: calc(260 / 1920 * 100vw);
+    height: calc(40 / 1920 * 100vw);
+    scale: 1;
+    transition: 0.2s;
+}
+.content3-logo-plans-svg4 {
+    position: absolute;
+    bottom: calc(171 / 1080 * 100vh);
+    right: calc(461.86 / 1920 * 100vw);
+    width: calc(265.14 / 1920 * 100vw);
+    height: calc(65 / 1920 * 100vw);
+    scale: 1;
+    transition: 0.2s;
+}
+.content3-logo-plans-svg5 {
+    position: absolute;
+    bottom: calc(183 / 1080 * 100vh);
+    right: calc(84.28 / 1920 * 100vw);
+    width: calc(273.72 / 1920 * 100vw);
+    height: calc(65 / 1920 * 100vw);
+    scale: 1;
+    transition: 0.2s;
+}
+
+.content3-logo-plans-svg1:hover, .content3-logo-plans-svg2:hover, .content3-logo-plans-svg3:hover, .content3-logo-plans-svg4:hover, .content3-logo-plans-svg5:hover {
+    scale: 1.2;
+    transition: 0.2s;
 }
 
 .content3-logo-plans-mquery {
@@ -754,6 +804,7 @@ header {
     left: calc(35 / 1920 * 100vw);
     object-fit: contain;
 }
+
 
 /* Container1 End */
 
@@ -1584,22 +1635,13 @@ header {
     letter-spacing: -.252083vw;
 }
 
-.container5-content-joel-mott {
-    position: absolute;
-    width: 21.197917vw;
-    height: 6.822917vw;
-    top: 28.072917vw;
-    left: 39.583333vw;
-    z-index: 20;
-}
-
 .container5-content-container {
     display: inline-flex;
     flex-direction: column;
     align-items: center;
     gap: .677083vw;
     position: absolute;
-    top: 37.5vw;
+    top: 33.5vw;
     left: 38vw;
 }
 
