--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ header {
 
 .nav-bar li:hover {
     cursor: pointer;
-    color: #1F4283;
+    color: #63769A;
     font-size: 1.09375vw;
     font-style: normal;
     font-weight: 400;
@@ -174,6 +174,7 @@ header {
 
 .nav-resources {
     display: flex;
+    flex-direction: row-reverse;
     align-items: center;
     gap: .260417vw;
 }
@@ -196,6 +197,10 @@ header {
     background: #1F4283;
     border: none;
     cursor: pointer;
+}
+
+.nav-button:hover {
+    background: #94ACE8;
 }
 
 .nav-button p {
@@ -376,6 +381,11 @@ header {
     letter-spacing: calc(-.9984 / 1920 * 100vw);
     border: none;
 }
+.get-free-btn:hover {
+    background: #94ACE8;
+    border: 1px solid rgba(148, 172, 232, 0.00);
+    color: #FFF;
+}
 
 .explore-software-btn {
     border-radius: 15px;
@@ -392,6 +402,11 @@ header {
     cursor: pointer;
     width: calc(283 / 1920 * 100vw);
     height: calc(94 / 1080 * 100vh);
+}
+.explore-software-btn:hover {
+    color: #FFF;
+    border: 1px solid #94ACE8;
+    background: rgba(255, 255, 255, 0.25);
 }
 
 .text-no-credit-card {
@@ -422,7 +437,6 @@ header {
     height: calc(242 / 1920 * 100vw);
     background-image: url(https://c.animaapp.com/O1yJMPG5/img/glass.svg);
     background-size: 100% 100%;
-    overflow: hidden;
 }
 
 .box-avatars {
@@ -544,6 +558,13 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
+    scale: 1;
+    transition: 1s;
+}
+.box-button:hover {
+    scale: 1.2;
+    transition: 1s;
 }
 
 #box-vector {
@@ -1170,6 +1191,11 @@ header {
     border: none;
     cursor: pointer;
 }
+.button1-content1-container2:hover {
+    background: #FFF;
+    color: #0B1831;
+    border: none;
+}
 
 .button2-content1-container2 {
     width: calc(283 / 1920 * 100vw);
@@ -1189,6 +1215,11 @@ header {
     font-weight: 500;
     line-height: normal;
     letter-spacing: calc(-1 / 1920 * 100vw);
+}
+.button2-content1-container2:hover {
+    color: #1F4283;
+    border: 1px solid #1F4283;
+    background: rgba(255, 255, 255, 0.25);
 }
 
 .content2-container2 {
@@ -1405,6 +1436,10 @@ header {
     border: none;
     width: calc(180 / 1920 * 100vw);
     height: calc(67 / 1080 * 100vh);
+}
+.content-card-content3-container2 button:hover {
+    background: #94ACE8;
+    color: #FFF;
 }
 
 /* Container2 End */
@@ -1861,19 +1896,17 @@ header {
     background-color: #1f4283;
     border-radius: .78125vw;
     cursor: pointer;
-}
-
-.container5-content-get-started-today {
-    position: relative;
-    width: fit-content;
-    margin-top: -1px;
     font-family: "Gordita-Medium", Helvetica;
     font-weight: 500;
     color: #ffffff;
     font-size: 1.302083vw;
-    text-align: center;
     letter-spacing: calc(-1 / 1920 * 100vw);
     line-height: normal;
+    text-align: center;
+}
+.container5-content-btn:hover {
+    background: #94ACE8;
+    color: #ffffff;
 }
 
 .container5-content-button {
@@ -1890,12 +1923,6 @@ header {
     position: relative;
     flex: 0 0 auto;
     cursor: pointer;
-}
-
-.container5-content-get-started-today-2 {
-    position: relative;
-    width: fit-content;
-    margin-top: -1px;
     font-family: "Gordita-Medium", Helvetica;
     font-weight: 500;
     color: #94ace8;
@@ -1903,6 +1930,11 @@ header {
     text-align: center;
     letter-spacing: calc(-1 / 1920 * 100vw);
     line-height: normal;
+}
+.container5-content-button:hover {
+    border: 1px solid #1F4283;
+    background: #ffffff40;
+    color: #1F4283;
 }
 
 .container5-content-text-wrapper-2 {
@@ -5799,26 +5831,6 @@ footer {
     top: calc(404 / 1080* 100vh);
     left: calc(1522 / 1920* 100vw);
     z-index: 3;
-}
-
-.footer-btn {
-    all: unset;
-    font-size: calc(25 / 1920 * 100vw);
-    box-sizing: border-box;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    padding: calc(18 / 1080 * 100vh) calc(43 / 1920 * 100vw);
-    background-color: #ffffff;
-    color: #1F4283;
-    border-radius: 15px;
-    box-shadow: 0px 2px 34px 6px #1f42832b;
-}
-
-.footer-text-wrapper {
-    position: relative;
-    width: fit-content;
-    margin-top: calc(-1 / 1080 * 100vh);
     font-family: "Gordita-Medium", Helvetica;
     font-weight: 500;
     color: rgba(31, 66, 131, 1);
@@ -5827,6 +5839,15 @@ footer {
     letter-spacing: calc(-1 / 1920 * 100vw);
     line-height: normal;
     white-space: nowrap;
+    padding: calc(18 / 1080 * 100vh) calc(43 / 1920 * 100vw);
+    background-color: #ffffff;
+    border-radius: 15px;
+    box-shadow: 0px 2px 34px 6px #1f42832b;
+}
+.footer-btn-a:hover {
+    color: #FFF;
+    background: #94ACE8;
+    box-shadow: 0px 2px 34px 6px rgba(31, 66, 131, 0.17);
 }
 
 .footer-medios-de {
